--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ebooklib>=0.18",
     "lxml>=5.3.0",
     "lxml-stubs>=0.5.1",
+    "typer[full]>=0.15.1",
 ]
 
 [tool.pyright]
